--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="search-type">
             <button data-serach-type='next-type'></button>
             <button data-serach-type='previous-type'></button>
-            <button data-serach-type='next'></button>
-            <button data-serach-type='previous'></button>
+            <button data-serach-type='next' disabled></button>
+            <button data-serach-type='previous' disabled></button>
         </div>
     </div>
     <section class="help" data-modal ="container">
