--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="https://i.pinimg.com/564x/b1/77/26/b17726b28b57427df8895bf1dafaa9b6.jpg" >
     <meta property="og:title" content="POKÉDEX"/>
+    <meta name="description" content="Projeto Poké-api">
+    <meta property="og:url" content="https://my-poke-api-project.herokuapp.com/" />
+    <meta property="og:image" content="https://i.pinimg.com/564x/b1/77/26/b17726b28b57427df8895bf1dafaa9b6.jpg" >
+    <meta property="og:type" content="website" />
     <link rel="icon" href="./assets/imagens/POKEBOLA.png">
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
